fixed the alignments

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -18,3 +18,68 @@
 .header-imputs-div{
     margin: 0 0 40px 0;
 }
+.status-success{
+    font-size: .7rem;
+    padding: 2px 10px;
+    background-color: #198754;
+    color: white;
+    font-weight:600;
+    /* border: 1px solid gray; */
+   
+    margin-top: -10px;
+    width: 80px;
+}
+
+.search-div{
+    display: flex;
+    align-items: center;
+
+}
+.search-input{
+    padding: 6px 4px;
+    outline: none;
+}
+.search-icon{
+    background: #0D6EFD;
+    padding: 7px;
+    width: 35px;
+    height: 40px;
+
+}
+.rocke-image{
+    margin-bottom: 18px;
+}
+
+.status-failed{
+    font-size: .7rem;
+    padding: 2px 19px;
+    background-color: #DC3545;
+    color: white;
+    font-weight:600;
+    /* border: 1px solid gray; */
+    font-family: 'Poppins', sans-serif;
+   border-radius: 4px;
+    /* width: 80px; */
+    margin-top: -10px;
+}
+.img-date-name-div{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    line-height: 1;
+   
+}
+.launch-stat-div{
+    display: grid;
+    place-items: center;
+    
+}
+.single-lounch-div{
+    gap: 10px;
+    border-radius: 4px;
+    border: 1px solid #CED4DA;
+    padding: 10px 0;
+    margin: 10px 0;
+    /* box-shadow: 0px 0px 34px -3px rgba(0,0,0,0.1); */
+}
